[gd_scene load_steps=4 format=2]

[ext_resource path="res://MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/KellySlab-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 792.0
margin_top = 365.0
margin_right = 1128.0
margin_bottom = 715.0
custom_constants/separation = 10

[node name="SingleplayerButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 336.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 4 )
text = "Singleplayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MultiplayerButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 89.0
margin_right = 336.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 4 )
text = "Multiplayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MPNameEdit" type="LineEdit" parent="CenterContainer/VBoxContainer"]
margin_top = 178.0
margin_right = 336.0
margin_bottom = 261.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
align = 1
placeholder_text = "enter name"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 271.0
margin_right = 336.0
margin_bottom = 350.0

[node name="JoinButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 166.0
margin_bottom = 79.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 170.0
margin_right = 336.0
margin_bottom = 79.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CenterContainer/VBoxContainer/SingleplayerButton" to="." method="_on_Singleplayer_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MultiplayerButton" to="." method="_on_Multiplayer_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/JoinButton" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/HostButton" to="." method="_on_Host_pressed"]
